--- a/css/tooplate-crispy-kitchen.css
+++ b/css/tooplate-crispy-kitchen.css
@@ -1,8 +1,8 @@
 /*
 
-Tooplate 2129 Crispy Kitchen
+ Crispy Kitchen
 
-https://www.tooplate.com/view/2129-crispy-kitchen
+https://github.com/12liyab/view/2129-crispy-kitchen
 
 */
 
